# personal

./: .gitignore  readme.md
azure-identity-poc/hello/: CMakeLists.txt  CMakePresets.json  hello.cpp  hello.h  vcpkg-configuration.json  vcpkg.json
entraidkafka/: CMakeLists.txt  dirs.proj  entraidkafka.cpp  entraidkafka.h  exports.extras.props  package.xml  vcpkg.json
entraidkafka/inc/: entraidkafka.h  entraidwindowscert.h
entraidkafka/src/: EntraIdKafka.vcxproj  entraidkafka.cpp  entraidwindowscert.cpp
example/entraidkafkaclient/: CMakeLists.txt  ReadMe.md  entraidkafkaclient.cpp  vcpkg-configuration.json  vcpkg.json
ports/entraidkafka/: portfile.cmake  usage  vcpkg.json
versions/: baseline.json
versions/e-/: entraidkafka.json
